--- a/src/main/resources/templates/chat/room_list.html
+++ b/src/main/resources/templates/chat/room_list.html
@@ -35,8 +35,8 @@
 		</div>
 		<ul class="list-group">
 			<li class="list-group-item list-group-item-action"
-				v-for="item in chatrooms" v-bind:key="item.roomCd"
-				v-on:click="enterRoom(item.roomCd)">{{item.roomNm}}</li>
+				v-for="item in chatrooms" v-bind:key="item.ChannelId"
+				v-on:click="enterRoom(item.ChannelId)">{{item.ChannelName}}</li>
 		</ul>
 	</div>
 	<!-- JavaScript -->
@@ -76,7 +76,7 @@
                     axios.post('http://'+chatUrl+'/chat/createRoom', params)
                     .then(response => {
                         console.log(response)
-                        alert(response.data.result.chatRoom.roomNm+"방 개설에 성공하였습니다.")
+                        alert(response.data.result.chatRoom.ChannelName+"방 개설에 성공하였습니다.")
                         this.room_name = '';
                         this.activeRoomList();
                     })
@@ -86,11 +86,11 @@
                     });
                 }
             },
-            enterRoom: (roomCd) => {
+            enterRoom: (ChannelId) => {
                 var sender = prompt('대화명을 입력해 주세요.');
                 if(sender !== "") {
                     localStorage.setItem('wschat.sender',sender);
-                    localStorage.setItem('wschat.roomCd',roomCd);
+                    localStorage.setItem('wschat.ChannelId',ChannelId);
                     location.href="room_detail.html";
                 }
             }
