--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -4,32 +4,34 @@
 <head>
 <title>Chat</title>
 <meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <!-- CSS -->
 	<script	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+	<script src="https://cdn.jsdelivr.net/npm/axios@0.17.1/dist/axios.min.js"></script>
 	<link href="css/chat.css" rel="stylesheet" type="text/css"/>
-	<script src="js/chat.js"	type="text/javascript" ></script>
-	<link rel="stylesheet" href="https://kit.fontawesome.com/59615b4885.css" crossorigin="anonymous">
+	<script src="js/chat.js" type="text/javascript" ></script>
 </head>
 <body>
 	<div id="chatbox">
+		<input type='hidden' class='USER_CD_LOGIN' id='USER_CD_LOGIN' name='USER_CD_LOGIN' />
+		<input type='hidden' class='USER_NM_LOGIN' id='USER_NM_LOGIN' name='USER_NM_LOGIN' />
 		<div id="chat_container">
 			<div id="topmenu">
-				<span class="friends chat_header">
+				<span class="friends chat_header" onclick="refreshUserlist('1')">
 					<img src="image/people_icon.png" />
 				</span> 
 				<span class="chats chat_header">
-					<img src="image/sms_icon.png" />
+					<img src="image/sms_icon.png" onclick="refreshChatlist('1')" />
 				</span> 
-				<span class="history chat_header">
+				<!-- <span class="history chat_header">
 					<img src="image/etc_icon.png" />
-				</span>
+				</span> -->
 			</div>
-
-			<div id="friends">
-				<div class="friend">
+			<input type='hidden' name='current_page_num' value='1'/>
+			
+			<div id="friends" style='height: calc(100% - 60px); overflow-y: scroll;'>
+				<!-- <div class="friend">
 					<img
 						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" />
 					<p>
@@ -54,29 +56,11 @@
 						<strong>Tomas Kennedy</strong> <span>tomaskennedy@gmail.com</span>
 					</p>
 					<div class="status inactive"></div>
-				</div>
+				</div> -->
+			</div>
 
-				<div class="friend">
-					<img
-						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/4_copy.jpg" />
-					<p>
-						<strong>Enrique Sutton</strong> <span>enriquesutton@gmail.com</span>
-					</p>
-					<div class="status inactive"></div>
-				</div>
-
-				<div class="friend">
-					<img
-						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/5_copy.jpg" />
-					<p>
-						<strong> Darnell Strickland</strong> <span>darnellstrickland@gmail.com</span>
-					</p>
-					<div class="status inactive"></div>
-				</div>
-
-				<div id="search">
-					<input type="text" id="searchfield" value="Search contacts..." />
-				</div>
+			<div id="search">
+				<input type="text" id="searchfield" value="Search contacts..." />
 			</div>
 		</div>
 
@@ -87,15 +71,14 @@
 					<div class="close close1"></div>
 				</div>
 
-				<p>Miro Badev</p>
-				<span>miro@badev@gmail.com</span>
+				<p id='opponent_name' class='opponent_name'>Miro Badev</p>
+				<span id='opponent_email' class='opponent_email'>miro@badev@gmail.com</span>
 			</div>
-			<div id="chat-messages">
-				<label>Thursday 02</label>
+			<div id="chat-messages" style='height: calc(100% - 214px);'>
+				<label >Thursday 02</label>
 
 				<div class="message">
-					<img
-						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" />
+					<img src="image/people_icon.png" />
 					<div class="bubble">
 						Really cool stuff!
 						<div class="corner"></div>
@@ -104,8 +87,7 @@
 				</div>
 
 				<div class="message right">
-					<img
-						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/2_copy.jpg" />
+					<img src="image/people_icon.png" />
 					<div class="bubble">
 						Can you share a link for the tutorial?
 						<div class="corner"></div>
@@ -114,8 +96,7 @@
 				</div>
 
 				<div class="message">
-					<img
-						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" />
+					<img src="image/people_icon.png"/>
 					<div class="bubble">
 						Yeah, hold on
 						<div class="corner"></div>
@@ -124,8 +105,7 @@
 				</div>
 
 				<div class="message right">
-					<img
-						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/2_copy.jpg" />
+					<img src="image/people_icon.png"/>
 					<div class="bubble">
 						Can you share a link for the tutorial?
 						<div class="corner"></div>
@@ -134,19 +114,17 @@
 				</div>
 
 				<div class="message">
-					<img
-						src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" />
+					<img src="image/people_icon.png"/>
 					<div class="bubble">
 						Yeah, hold on
 						<div class="corner"></div>
 						<span>Now</span>
 					</div>
 				</div>
-
 			</div>
 
 			<div id="sendmessage">
-				<input type="text" value="Send message..." />
+				<input type="text" id='msg' class='msg' value="Send message..."/>
 				<button id="send"></button>
 			</div>
 
